envoy/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address: { socket_address: { address: 0.0.0.0, port_value: 9901 } }

static_resources:
  listeners:
    - name: listener_0
      address: { socket_address: { address: 0.0.0.0, port_value: 8080 } }
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
                codec_type: auto
                stat_prefix: ingress_http
                access_log:
                  - name: envoy.file_access_log
                    typed_config:
                      "@type": type.googleapis.com/envoy.config.accesslog.v2.FileAccessLog
                      path: "/dev/stdout"
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      cors:
                        allow_headers: "keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,authorization"
                        allow_methods: "GET"
                        allow_origin_string_match:
                          - exact: "*"
                        max_age: "1728000"
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/" }
                          route: { cluster: nginx-gabut }

                http_filters:
                  - name: envoy.cors
                    typed_config: {}
                  - name: envoy.router
                    typed_config: {}

  clusters:
    - name: nginx-gabut
      connect_timeout: 0.25s
      type: logical_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: nginx-server
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address: { socket_address: { address: nginx-gabut, port_value: 46440 } }
